// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/routes/components/settings/SettingsFooter.tsx app version should show development app version 1`] = `
<span
  aria-label="app-version"
>
  Gitify
   
  dev
</span>
`;

exports[`renderer/routes/components/settings/SettingsFooter.tsx app version should show production app version 1`] = `
<span
  aria-label="app-version"
>
  Gitify
   
  v0.0.1
</span>
`;
